fix resume and spacing a bit

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,6 +16,22 @@
   right: 15%;
 }
 
+ul {
+  margin-top: 8px;
+  margin-bottom: 0px;
+}
+
+ul ul {
+  margin-top: 0px;
+  margin-bottom: 8px;
+  /* padding-left: 15px; */
+}
+
+h2 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+}
+
 ul li {
   font-size: 16px;
   margin-bottom: 8px;
